Simple prefs/Input: can't exit 'custom' value
Default caching policy:
- Set to custom, apply
- Set to normal, apply
- Set to Low, apply
Then anything you set always revert to 'custom'.
Default caching policy:
Then anything you set always revert to 'custom'.
added Severity::minor Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
assigned to @jbk and unassigned @Courmisch
added Component::Interface: Qt label and removed 1 deleted label
I have a fix.
commit 5dabbfb6 Author: Jean-Baptiste Kempf jb@videolan.org Date: Sat Oct 17 23:02:41 2009 +0200
Qt: simpleprefs, fix caching combobox
Fix [#3085](https://code.videolan.org/videolan/vlc/-/issues/3085)
Original author: jb@videolan.org
added Status::fixed label
closed
VideoLAN code repository instance