Qt: simpleprefs, fix caching combobox

Fix #3085